fix(stepper): change the hover and focus colors on all steps in light and dark mode.

--- a/sass/themes/schemas/components/dark/_stepper.scss
+++ b/sass/themes/schemas/components/dark/_stepper.scss
@@ -159,14 +159,14 @@ $dark-bootstrap-stepper: extend(
 /// @prop {Map} subtitle-color [contrast-color: ('gray', 50, .8)] - The text color of the step subtitle.
 /// @prop {Map} subtitle-hover-color [contrast-color: ('gray', 50, .8)] - The text color of the step subtitle on hover.
 /// @prop {Map} subtitle-focus-color [contrast-color: ('gray', 50, .8)] - The text color of the step subtitle on focus.
-/// @prop {Map} step-hover-background [contrast-color: ('gray', 50, .15)] - The background of the step header on hover.
-/// @prop {Map} step-focus-background [contrast-color: ('gray', 50, .15)] - The background of the step header on hover.
-/// @prop {Map} current-step-hover-background [contrast-color: ('gray', 50, .15)] - The background of the current step header on hover.
-/// @prop {Map} current-step-focus-background [contrast-color: ('gray', 50, .15)] - The background of the current step header on focus.
-/// @prop {Map} complete-step-hover-background [contrast-color: ('gray', 50, .15)] - The background of the complete step header on hover.
-/// @prop {Map} complete-step-focus-background [contrast-color: ('gray', 50, .15)] - The background of the complete step header on focus.
-/// @prop {Map} invalid-step-hover-background [contrast-color: ('gray', 50, .15)] - The background of the invalid step header on hover.
-/// @prop {Map} invalid-step-focus-background [contrast-color: ('gray', 50, .15)] - The background of the invalid step header on focus.
+/// @prop {Map} step-hover-background [contrast-color: ('gray', 50, .1)] - The background of the step header on hover.
+/// @prop {Map} step-focus-background [contrast-color: ('gray', 50, .1)] - The background of the step header on hover.
+/// @prop {Map} current-step-hover-background [contrast-color: ('gray', 50, .1)] - The background of the current step header on hover.
+/// @prop {Map} current-step-focus-background [contrast-color: ('gray', 50, .1)] - The background of the current step header on focus.
+/// @prop {Map} complete-step-hover-background [contrast-color: ('gray', 50, .1)] - The background of the complete step header on hover.
+/// @prop {Map} complete-step-focus-background [contrast-color: ('gray', 50, .1)] - The background of the complete step header on focus.
+/// @prop {Map} invalid-step-hover-background [contrast-color: ('gray', 50, .1)] - The background of the invalid step header on hover.
+/// @prop {Map} invalid-step-focus-background [contrast-color: ('gray', 50, .1)] - The background of the invalid step header on focus.
 /// @prop {Map} complete-indicator-background [contrast-color: ('gray', 50, .15)] - The background color of the completed step indicator.
 /// @prop {Map} complete-indicator-color [contrast-color: ('gray', 50, .8)] - The color of the completed step indicator.
 /// @prop {Map} disabled-indicator-color [contrast-color: ('gray', 50, .2)] - The color of the disabled step indicator, title, and subtitle.
@@ -244,56 +244,56 @@ $dark-indigo-stepper: extend(
             contrast-color: (
                 'gray',
                 50,
-                0.15,
+                0.1,
             ),
         ),
         step-focus-background: (
             contrast-color: (
                 'gray',
                 50,
-                0.15,
+                0.1,
             ),
         ),
         current-step-hover-background: (
             contrast-color: (
                 'gray',
                 50,
-                0.15,
+                0.1,
             ),
         ),
         current-step-focus-background: (
             contrast-color: (
                 'gray',
                 50,
-                0.15,
+                0.1,
             ),
         ),
         complete-step-hover-background: (
             contrast-color: (
                 'gray',
                 50,
-                0.15,
+                0.1,
             ),
         ),
         complete-step-focus-background: (
             contrast-color: (
                 'gray',
                 50,
-                0.15,
+                0.1,
             ),
         ),
         invalid-step-hover-background: (
             contrast-color: (
                 'gray',
                 50,
-                0.15,
+                0.1,
             ),
         ),
         invalid-step-focus-background: (
             contrast-color: (
                 'gray',
                 50,
-                0.15,
+                0.1,
             ),
         ),
         complete-indicator-background: (
