--- a/sass/themes/schemas/components/light/_stepper.scss
+++ b/sass/themes/schemas/components/light/_stepper.scss
@@ -645,14 +645,14 @@ $bootstrap-stepper: extend(
 /// @prop {Map} indicator-background [color: ('gray', 900, .15)] - The background color of the incomplete step indicator.
 /// @prop {Color} indicator-outline [transparent] - The outline color of the incomplete step indicator.
 /// @prop {Map} indicator-color [color: ('gray', 800)] - The text color of the incomplete step indicator.
-/// @prop {Map} step-hover-background [color: ('gray', 900, .15)] - The background of the step header on hover.
-/// @prop {Map} step-focus-background [color: ('gray', 900,. 15)] - The background of the step header on focus.
-/// @prop {Map} current-step-hover-background [color: ('gray', 900, .15)] - The background of the current step header on hover.
-/// @prop {Map} current-step-focus-background [color: ('gray', 900, .15)] - The background of the current step header on focus.
-/// @prop {Map} complete-step-hover-background [color: ('gray', 900, .15)] - The background of the complete step header on hover.
-/// @prop {Map} complete-step-focus-background [color: ('gray', 900, .15)] - The background of the complete step header on focus.
-/// @prop {Map} invalid-step-hover-background [color: ('gray', 900, .15)] - The background of the invalid step header on hover.
-/// @prop {Map} invalid-step-focus-background [color: ('gray', 900, .15)] - The background of the invalid step header on focus.
+/// @prop {Map} step-hover-background [color: ('gray', 900, .05)] - The background of the step header on hover.
+/// @prop {Map} step-focus-background [color: ('gray', 900,. 05)] - The background of the step header on focus.
+/// @prop {Map} current-step-hover-background [color: ('gray', 900, .05)] - The background of the current step header on hover.
+/// @prop {Map} current-step-focus-background [color: ('gray', 900, .05)] - The background of the current step header on focus.
+/// @prop {Map} complete-step-hover-background [color: ('gray', 900, .05)] - The background of the complete step header on hover.
+/// @prop {Map} complete-step-focus-background [color: ('gray', 900, .05)] - The background of the complete step header on focus.
+/// @prop {Map} invalid-step-hover-background [color: ('gray', 900, .05)] - The background of the invalid step header on hover.
+/// @prop {Map} invalid-step-focus-background [color: ('gray', 900, .05)] - The background of the invalid step header on focus.
 /// @prop {Map} disabled-title-color [color: ('gray', 900, .2)] - The title color of the disabled step.
 /// @prop {Map} disabled-subtitle-color [color: ('gray', 900, .2)] - The subtitle color of the disabled step.
 /// @prop {Map} disabled-indicator-color [color: ('gray', 900, .2)] - The color of the disabled step indicator, title, and subtitle.
@@ -717,56 +717,56 @@ $indigo-stepper: extend(
             color: (
                 'gray',
                 900,
-                0.15,
+                0.05,
             ),
         ),
         step-focus-background: (
             color: (
                 'gray',
                 900,
-                0.15,
+                0.05,
             ),
         ),
         current-step-hover-background: (
             color: (
                 'gray',
                 900,
-                0.15,
+                0.05,
             ),
         ),
         current-step-focus-background: (
             color: (
                 'gray',
                 900,
-                0.15,
+                0.05,
             ),
         ),
         complete-step-hover-background: (
             color: (
                 'gray',
                 900,
-                0.15,
+                0.05,
             ),
         ),
         complete-step-focus-background: (
             color: (
                 'gray',
                 900,
-                0.15,
+                0.05,
             ),
         ),
         invalid-step-hover-background: (
             color: (
                 'gray',
                 900,
-                0.15,
+                0.05,
             ),
         ),
         invalid-step-focus-background: (
             color: (
                 'gray',
                 900,
-                0.15,
+                0.05,
             ),
         ),
         disabled-title-color: (
